--- a/chasm.cabal
+++ b/chasm.cabal
@@ -1,13 +1,15 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.4.
+-- This file has been generated from package.yaml by hpack version 0.35.0.
 --
 -- see: https://github.com/sol/hpack
+--
+-- hash: d0a959eaed33a0b8f98b862ef6c3e35a38c8e788bf358edc005d010343378b2d
 
 name:           chasm
 version:        0.1.0.0
-homepage:       https://github.com/maybetonyfu/chameleon#readme
-bug-reports:    https://github.com/maybetonyfu/chameleon/issues
+homepage:       https://github.com/maybetonyfu/chasm#readme
+bug-reports:    https://github.com/maybetonyfu/chasm/issues
 author:         Tony Fu
 maintainer:     tonyfu@fastmail.com
 copyright:      2023 Tony Fu
@@ -16,7 +18,7 @@ build-type:     Simple
 
 source-repository head
   type: git
-  location: https://github.com/maybetonyfu/chameleon
+  location: https://github.com/maybetonyfu/chasm
 
 library
   exposed-modules:
@@ -26,31 +28,8 @@ library
   hs-source-dirs:
       src
   default-extensions:
-      BangPatterns
-      BinaryLiterals
-      ConstraintKinds
-      DataKinds
-      DefaultSignatures
-      DeriveDataTypeable
-      DeriveFoldable
-      DeriveFunctor
-      DeriveGeneric
-      DeriveTraversable
-      DoAndIfThenElse
-      EmptyDataDecls
-      ExistentialQuantification
       FlexibleContexts
       FlexibleInstances
-      FunctionalDependencies
-      GADTs
-      GeneralizedNewtypeDeriving
-      InstanceSigs
-      KindSignatures
-      LambdaCase
-      MultiParamTypeClasses
-      MultiWayIf
-      NamedFieldPuns
-      NoImplicitPrelude
       OverloadedStrings
       PartialTypeSignatures
       PatternGuards
@@ -62,14 +41,11 @@ library
       StandaloneDeriving
       TemplateHaskell
       TupleSections
-      TypeFamilies
-      TypeSynonymInstances
-      ViewPatterns
+      NoImplicitPrelude
   build-depends:
       base
     , haskell-src-exts
     , rio
-    , yesod
   default-language: Haskell2010
 
 executable chasm
@@ -79,31 +55,8 @@ executable chasm
   hs-source-dirs:
       app
   default-extensions:
-      BangPatterns
-      BinaryLiterals
-      ConstraintKinds
-      DataKinds
-      DefaultSignatures
-      DeriveDataTypeable
-      DeriveFoldable
-      DeriveFunctor
-      DeriveGeneric
-      DeriveTraversable
-      DoAndIfThenElse
-      EmptyDataDecls
-      ExistentialQuantification
       FlexibleContexts
       FlexibleInstances
-      FunctionalDependencies
-      GADTs
-      GeneralizedNewtypeDeriving
-      InstanceSigs
-      KindSignatures
-      LambdaCase
-      MultiParamTypeClasses
-      MultiWayIf
-      NamedFieldPuns
-      NoImplicitPrelude
       OverloadedStrings
       PartialTypeSignatures
       PatternGuards
@@ -115,14 +68,11 @@ executable chasm
       StandaloneDeriving
       TemplateHaskell
       TupleSections
-      TypeFamilies
-      TypeSynonymInstances
-      ViewPatterns
+      NoImplicitPrelude
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base
     , chasm
     , haskell-src-exts
     , rio
-    , yesod
   default-language: Haskell2010
