--- a/chasm.cabal
+++ b/chasm.cabal
@@ -25,13 +25,16 @@ library
       Range
       Slice
       Typing
+      Var
   other-modules:
       Paths_chasm
   hs-source-dirs:
       src
   build-depends:
-      base
+      aeson
+    , base
     , haskell-src-exts
+    , parsec
     , rio
     , string-qq
   default-language: Haskell2010
@@ -44,9 +47,11 @@ executable chasm
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base
+      aeson
+    , base
     , chasm
     , haskell-src-exts
+    , parsec
     , rio
     , string-qq
   default-language: Haskell2010
