--- a/chasm.cabal
+++ b/chasm.cabal
@@ -20,8 +20,9 @@ source-repository head
 
 library
   exposed-modules:
+      Bottle
       Environment
-      Mod
+      Lenses
       Namable
       Range
       Slice
