--- a/chasm/chasm.cabal
+++ b/chasm/chasm.cabal
@@ -41,25 +41,7 @@ library
       aeson
     , base
     , haskell-src-exts
-    , mtl
-    , parsec
-    , prolog
-    , rio
-    , string-qq
-  default-language: Haskell2010
-
-executable chasm
-  main-is: Main.hs
-  other-modules:
-      Paths_chasm
-  hs-source-dirs:
-      app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      aeson
-    , base
-    , chasm
-    , haskell-src-exts
+    , minisat-solver
     , mtl
     , parsec
     , prolog
