--- a/chasm/package.yaml
+++ b/chasm/package.yaml
@@ -15,18 +15,8 @@ dependencies:
 - parsec
 - prolog
 - mtl
+- minisat-solver
 
 library:
   source-dirs: src
 
-
-executables:
-  chasm:
-    main: Main.hs
-    source-dirs: app
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - chasm
