--- a/stack.yaml
+++ b/stack.yaml
@@ -4,3 +4,5 @@ packages:
 - prolog
 - chasm
 
+extra-deps:
+- minisat-solver-0.1@sha256:e2ff11b1ca8c66e43f8bb2e04f21bd1b812efb94ff215d74f998c928e7e92dcd,5210
