--- a/chasm/package.yaml
+++ b/chasm/package.yaml
@@ -20,3 +20,13 @@ dependencies:
 library:
   source-dirs: src
 
+executables:
+  ig:
+    main: Main.hs
+    source-dirs: app
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - chasm
